--- a/Frontend/AmIFit.UI/src/app/login/login-page/login-page.component.html
+++ b/Frontend/AmIFit.UI/src/app/login/login-page/login-page.component.html
@@ -1,14 +1,16 @@
+<div class="div-wrapper">
 <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <h4>Login</h4>
     <div class="login-field-wrapper">
         <label for="user-name">UserName: </label>
-        <input class="login-field" id="user-name" type="text" formControlName="userName">
+        <input class="login-field" id="user-name" type="text" formControlName="userName" placeholder="Enter User Name">
     </div>
     <div class="login-field-wrapper">
         <label for="password">Password: </label>
-        <input class="login-field" id="password" type="password" formControlName="password">
+        <input class="login-field" id="password" type="password" formControlName="password" placeholder="Enter Password">
     </div>
     <div class="submit-wrapper">
-        <button class="submit-btn" type="submit" [disabled]="!loginForm.valid">Log In</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">Log In</button>
     </div>
 </form>
+</div>
