--- a/Frontend/AmIFit.UI/src/app/splashscreen/splash-screen/splash-screen.component.html
+++ b/Frontend/AmIFit.UI/src/app/splashscreen/splash-screen/splash-screen.component.html
@@ -1,1 +1,11 @@
-<p>splash-screen works!</p>
+<div
+  class="app-splash-screen"
+  [ngStyle]="{ left: windowWidth }"
+  *ngIf="showSplash"
+>
+  <div class="app-splash-inner">
+    <div class="app-logo"></div>
+    <div class="app-label">AmIFit</div>
+    <div class="app-loader"></div>
+  </div>
+</div>
