--- a/Frontend/AmIFit.UI/src/app/login/login-page/login-page.component.css
+++ b/Frontend/AmIFit.UI/src/app/login/login-page/login-page.component.css
@@ -10,7 +10,7 @@
     margin: 10%;
     border: 1px solid black;
     border-radius: 14px;    
-    box-shadow: inset 0 2em 3em rgba(255, 148, 112), 0 0 0 2px rgb(255, 148, 112), 0.3em 0.3em 1em rgba(255, 148, 112);
+    box-shadow: inset 0 2em 3em rgba(189, 195, 199, 1), 0 0 0 2px rgb(189, 195, 199, 1), 0.3em 0.3em 1em rgba(189, 195, 199, 1);
     width: 40%;
 }
 
