--- a/Frontend/AmIFit.UI/src/app/app.component.html
+++ b/Frontend/AmIFit.UI/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-splash-screen></app-splash-screen>
+<div style="box-shadow: inset 0 2em 3em rgba(189, 195, 199, 1), 0 0 0 2px rgb(189, 195, 199, 1), 0.3em 0.3em 1em rgba(189, 195, 199, 1);">
+<app-header></app-header>
+</div>
 <router-outlet></router-outlet>
