Changes for header and login page

--- a/Frontend/AmIFit.UI/src/app/dashboard/dashboard/dashboard.component.html
+++ b/Frontend/AmIFit.UI/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<section>
+    <h1>Body Temperature</h1>
+    <div>
+      <p>Fahrenheit to Celsius</p>
+      <p>Fahrenheit : <input type="text"  /></p>
+      <br>
+      <p>Celcius to Fahrenheit</p>
+      <p>Celcius : <input type="text"  /></p>
+    </div>
+  </section>
