--- a/Frontend/AmIFit.UI/src/app/dashboard/dashboard/dashboard.component.html
+++ b/Frontend/AmIFit.UI/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,10 +1,41 @@
-<section>
-    <h1>Body Temperature</h1>
-    <div>
-      <p>Fahrenheit to Celsius</p>
-      <p>Fahrenheit : <input type="text"  /></p>
-      <br>
-      <p>Celcius to Fahrenheit</p>
-      <p>Celcius : <input type="text"  /></p>
-    </div>
-  </section>
+<div>
+    <hr>
+    <h1 style="text-align: center;">Body Temperature Readings  </h1>
+    <!-- <div class="row">
+        <div class="column" style="background-color:#bbb;">
+          <h2 style="margin-left: 20px;">Reading</h2>
+        </div>
+        <div class="column" style="background-color:#bbb;">
+          <h2>Timestamp</h2>
+        </div>
+      </div> -->
+      <table class="table">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">Reading</th>
+                <th scope="col">Timestamp</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let reading of readingList">
+                <td>{{reading.reading}}</td>
+                <td>{{reading.timestamp}}</td>
+                <td>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+      <!-- <table> 
+    <thead>
+        <tr>
+            <th scope="col">
+                Reading
+            </th>
+            <th scope="col">
+                Timestamp
+            </th>
+        </tr>
+    </thead>
+</table>  -->
